# invest-game

./: .gitignore  CMakeLists.txt  LICENSE  testGlobal.cpp
docs/: api_guide.md  economics_guide.md  Система_управления_инвестиционным_портфелем.docx
src/core/: Bond.cpp  Bond.h  CMakeLists.txt  Deposit.cpp  Deposit.h  FundShares.cpp  FundShares.h  GameAPI.cpp  GameAPI.h  InvestmentAsset.cpp  InvestmentAsset.h  MarketModel.cpp  MarketModel.h  Metal.cpp  Metal.h  Portfolio.cpp  Portfolio.h  Simulation.cpp  Simulation.h  Stock.cpp  core.hpp
src/core/investments/: investment.hpp
src/interface/: CMakeLists.txt
src/tests/: CMakeLists.txt  TestMarket.cpp
src/ui/: AssetWindow.cpp  AssetWindow.h  CMakeLists.txt  CmakeLists.txt  InputDialog.cpp  InputDialog.h  MainWindow.cpp  MainWindow.h  MarketWindow.cpp  MarketWindow.h  assetwindow.cpp  assetwindow.h  inputdialog.cpp  marketwindow.cpp  marketwindow.h
